--- a/index.html
+++ b/index.html
@@ -26,10 +26,24 @@
         color: hsl(228, 45%, 44%);
       }
     </style>
+    <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
-    Build The Community Your Fans Will Love Huddle re-imagines the way we build
-    communities. You have a voice, but so does your audience. Create connections
-    with your users as you engage in genuine discussion. Register
+    <header>
+      <img src="/images/logo.svg" alt="header">
+    </header>
+    <div id="mockup">
+      <img class="img-responsive" src="/images/illustration-mockups.svg" alt="">
+    </div>
+    <div class="text">
+    <article>
+      <span>Build The Community Your Fans Will Love</span>
+      <p>Huddle re-imagines the way we build
+      communities. You have a voice, but so does your audience. Create connections
+      with your users as you engage in genuine discussion. 
+      </p>
+      <button class="btn-center">Register</button>
+    </article>
+  </div>
   </body>
 </html>
