--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
   </head>
   <body>
     <header>
-      <img src="/images/logo.svg" alt="header">
+      <img src="./images/logo.svg" alt="header">
     </header>
     <div id="mockup">
-      <img class="img-responsive" src="/images/illustration-mockups.svg" alt="">
+      <img class="img-responsive" src="./images/illustration-mockups.svg" alt="">
     </div>
     <div class="text">
     <article>
@@ -45,5 +45,8 @@
       <button class="btn-center">Register</button>
     </article>
   </div>
+  <footer>
+    
+  </footer>
   </body>
 </html>
