--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         color: hsl(228, 45%, 44%);
       }
     </style>
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/main2.css">
   </head>
   <body>
     <header>
